Java Marine API - changelog
<http://ktuukkan.github.io/marine-api/>

Version 0.12.0-SNAPSHOT
  - AIS message length validation moved to AISMessageParser.
  - AISMessage05; added missing DTE flag getter.

Version 0.11.0 (2019-07-06)

  - Support for GBS sentences; GNSS satellite fault detection
  - Support for GST sentences; GPS Pseudorange Noise Statistics
  - Support for HTC sentences; Heading/Track control command
  - Support for HTD sentences; Heading/Track control data
  - Support for TXT sentences; Text messages, e.g. device boot screens etc.
  - Support for DTA/DTB sentences; Boreal GasFinder2 and GasFinderMC. 
  - Support for $STALK sentences; NMEA-0183 layer of Raymarine SeaTalk protocol.
  - AbstracSentenceListener; improvements in generic types resolving to support
    more advanced use of generics and inheritance.
  - RPMSentence; added missing RPM setter
  - ROTSentence; negative rate of turn values are now allowed. Also, the value
    may now exceed -/+360 degrees.
  - GLLSentence; added support for FAA mode field (NMEA v3.0)
  - Exposed and refactored AbstractDataReader to allow implementing custom data
    readers for SentenceReader.
  - Improvements in AIS message parsers
    - added tests for all current message parsers
    - speed, course and heading values now converted in actual double values in
      messages 1-3, 5, 9, 18 and 19.
    - names and call signs are now trimmed in messages 5 and 21
    - fixed six-bit vector indexing bugs in message 5
  - PositionParser; leading zeros may now be omitted in the lat/lon fields. The
    separate lat/lon parser methods replaced with parseDegrees().
  - SentenceReader; added methods for removing listeners by sentence type.
  - Units enum; Added BARS, INCHES and MPH for Airmar support.

  Contributions:
  - GST parser by Tero Laitinen (@tlaitinen)
  - AbstractSentenceListener improvements by Axel Uhl (@axeluhl)
  - HTC and HTD parsers by Paweł Kozioł (@pkoziol)